# trivial_gltf

./: CMakeLists.txt  README.md
include/trivial_gltf/: gltf_parse.h
src/: parser.cpp  parser.h
test/: CMakeLists.txt  main.cpp
